--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -591,12 +591,16 @@ LeadScreen As screen:
                     ZIndex: =5
 
                     ctnaddressdetailsLdS As groupContainer.horizontalAutoLayoutContainer:
+                        AlignInContainer: =AlignInContainer.SetByContainer
+                        FillPortions: =0
                         Height: |-
                             =If(
                                 ctnbuildingnameleaddetailsLdS.Height > ctnaddressleaddetailsLdS.Height,
                                 ctnbuildingnameleaddetailsLdS.Height+30,
                                 ctnaddressleaddetailsLdS.Height+30
                             )
+                        LayoutMinHeight: =100
+                        LayoutMinWidth: =250
                         LayoutMode: =LayoutMode.Auto
                         Width: =Parent.Width
                         X: =60
@@ -604,9 +608,12 @@ LeadScreen As screen:
                         ZIndex: =1
 
                         ctncontractnumberleaddetailLdS As groupContainer.verticalAutoLayoutContainer:
+                            AlignInContainer: =AlignInContainer.SetByContainer
                             Height: =lblbuildingnamevalueleaddetailsLdS.Height+lblbuildingnameleaddetailsLdS.Height+20
                             LayoutDirection: =LayoutDirection.Vertical
                             LayoutJustifyContent: =LayoutJustifyContent.Center
+                            LayoutMinHeight: =100
+                            LayoutMinWidth: =250
                             LayoutMode: =LayoutMode.Auto
                             ZIndex: =1
 
@@ -624,9 +631,12 @@ LeadScreen As screen:
                                 ZIndex: =2
 
                         ctnzipcodeleaddetailsLdS As groupContainer.verticalAutoLayoutContainer:
+                            AlignInContainer: =AlignInContainer.SetByContainer
                             Height: =lblbuildingnamevalueleaddetailsLdS.Height+lblbuildingnameleaddetailsLdS.Height+20
                             LayoutDirection: =LayoutDirection.Vertical
                             LayoutJustifyContent: =LayoutJustifyContent.Center
+                            LayoutMinHeight: =100
+                            LayoutMinWidth: =250
                             LayoutMode: =LayoutMode.Auto
                             ZIndex: =2
 
@@ -644,9 +654,12 @@ LeadScreen As screen:
                                 ZIndex: =2
 
                         ctnbuildingnameleaddetailsLdS As groupContainer.verticalAutoLayoutContainer:
+                            AlignInContainer: =AlignInContainer.SetByContainer
                             Height: =lblbuildingnamevalueleaddetailsLdS.Height+lblbuildingnameleaddetailsLdS.Height
                             LayoutDirection: =LayoutDirection.Vertical
                             LayoutJustifyContent: =LayoutJustifyContent.Center
+                            LayoutMinHeight: =100
+                            LayoutMinWidth: =250
                             LayoutMode: =LayoutMode.Auto
                             ZIndex: =3
 
@@ -665,9 +678,12 @@ LeadScreen As screen:
                                 ZIndex: =2
 
                         ctnaddressleaddetailsLdS As groupContainer.verticalAutoLayoutContainer:
+                            AlignInContainer: =AlignInContainer.SetByContainer
                             Height: =lbladdresslvalueeaddetailsLdS.Height+lbladdressleaddetailsLdS.Height
                             LayoutDirection: =LayoutDirection.Vertical
                             LayoutJustifyContent: =LayoutJustifyContent.Center
+                            LayoutMinHeight: =100
+                            LayoutMinWidth: =250
                             LayoutMode: =LayoutMode.Auto
                             ZIndex: =4
 
@@ -694,12 +710,16 @@ LeadScreen As screen:
                         ZIndex: =2
 
                     ctnleadinfoleaddetailsLdS As groupContainer.horizontalAutoLayoutContainer:
+                        AlignInContainer: =AlignInContainer.SetByContainer
+                        FillPortions: =0
                         Height: |-
                             =If(
                                 ctnemailleaddetailsLdS.Height > ctnestimatedhoursleaddetailsLdS.Height,
                                 ctnemailleaddetailsLdS.Height+30,
                                 ctnestimatedhoursleaddetailsLdS.Height+30
                             )
+                        LayoutMinHeight: =100
+                        LayoutMinWidth: =250
                         LayoutMode: =LayoutMode.Auto
                         Width: =Parent.Width
                         X: =60
@@ -707,9 +727,12 @@ LeadScreen As screen:
                         ZIndex: =3
 
                         ctnstatusdateleaddetailsLdS As groupContainer.verticalAutoLayoutContainer:
+                            AlignInContainer: =AlignInContainer.SetByContainer
                             Height: =lblemailvalueleaddetailsLdS.Height+lblemailleaddetailsLdS.Height+20
                             LayoutDirection: =LayoutDirection.Vertical
                             LayoutJustifyContent: =LayoutJustifyContent.Center
+                            LayoutMinHeight: =100
+                            LayoutMinWidth: =250
                             LayoutMode: =LayoutMode.Auto
                             ZIndex: =1
 
@@ -727,9 +750,12 @@ LeadScreen As screen:
                                 ZIndex: =2
 
                         ctnnotesleaddetailsLdS As groupContainer.verticalAutoLayoutContainer:
+                            AlignInContainer: =AlignInContainer.SetByContainer
                             Height: =lblemailvalueleaddetailsLdS.Height+lblemailleaddetailsLdS.Height+20
                             LayoutDirection: =LayoutDirection.Vertical
                             LayoutJustifyContent: =LayoutJustifyContent.Center
+                            LayoutMinHeight: =100
+                            LayoutMinWidth: =250
                             LayoutMode: =LayoutMode.Auto
                             ZIndex: =2
 
@@ -747,9 +773,12 @@ LeadScreen As screen:
                                 ZIndex: =2
 
                         ctnemailleaddetailsLdS As groupContainer.verticalAutoLayoutContainer:
+                            AlignInContainer: =AlignInContainer.SetByContainer
                             Height: =lblemailvalueleaddetailsLdS.Height+lblemailleaddetailsLdS.Height+20
                             LayoutDirection: =LayoutDirection.Vertical
                             LayoutJustifyContent: =LayoutJustifyContent.Center
+                            LayoutMinHeight: =100
+                            LayoutMinWidth: =250
                             LayoutMode: =LayoutMode.Auto
                             ZIndex: =3
 
@@ -770,9 +799,12 @@ LeadScreen As screen:
                                 ZIndex: =2
 
                         ctnestimatedhoursleaddetailsLdS As groupContainer.verticalAutoLayoutContainer:
+                            AlignInContainer: =AlignInContainer.SetByContainer
                             Height: =lblestimatedhoursvalueleaddetailsLdS.Height+lblestimatedhoursleaddetailsLdS.Height+20
                             LayoutDirection: =LayoutDirection.Vertical
                             LayoutJustifyContent: =LayoutJustifyContent.Center
+                            LayoutMinHeight: =100
+                            LayoutMinWidth: =250
                             LayoutMode: =LayoutMode.Auto
                             ZIndex: =4
 
@@ -799,12 +831,16 @@ LeadScreen As screen:
                         ZIndex: =4
 
                     ctnunitinfoleaddetailsLdS As groupContainer.horizontalAutoLayoutContainer:
+                        AlignInContainer: =AlignInContainer.SetByContainer
+                        FillPortions: =0
                         Height: |-
                             =If(
                                 ctnunitdescriptionleaddetailsLdS.Height > ctncustomscopeofworkleaddetailsLdS.Height,
                                 ctnunitdescriptionleaddetailsLdS.Height + 30,
                                 ctncustomscopeofworkleaddetailsLdS.Height + 30
                             )
+                        LayoutMinHeight: =100
+                        LayoutMinWidth: =250
                         LayoutMode: =LayoutMode.Auto
                         Width: =Parent.Width
                         X: =20
@@ -812,9 +848,12 @@ LeadScreen As screen:
                         ZIndex: =5
 
                         ctnnoofunitsleaddetailsLdS As groupContainer.verticalAutoLayoutContainer:
+                            AlignInContainer: =AlignInContainer.SetByContainer
                             Height: =lblbuildingnamevalueleaddetailsLdS.Height+lblbuildingnameleaddetailsLdS.Height+20
                             LayoutDirection: =LayoutDirection.Vertical
                             LayoutJustifyContent: =LayoutJustifyContent.Center
+                            LayoutMinHeight: =100
+                            LayoutMinWidth: =250
                             LayoutMode: =LayoutMode.Auto
                             ZIndex: =1
 
@@ -832,9 +871,12 @@ LeadScreen As screen:
                                 ZIndex: =2
 
                         ctnunitdescriptionleaddetailsLdS As groupContainer.verticalAutoLayoutContainer:
+                            AlignInContainer: =AlignInContainer.SetByContainer
                             Height: =lblunitdescriptionleaddescriptionLdS.Height+lblunitdescriptionleaddetailsLdS.Height+20
                             LayoutDirection: =LayoutDirection.Vertical
                             LayoutJustifyContent: =LayoutJustifyContent.Center
+                            LayoutMinHeight: =100
+                            LayoutMinWidth: =250
                             LayoutMode: =LayoutMode.Auto
                             ZIndex: =2
 
@@ -853,9 +895,12 @@ LeadScreen As screen:
                                 ZIndex: =2
 
                         ctnscopeofworkleaddetailsldS As groupContainer.verticalAutoLayoutContainer:
+                            AlignInContainer: =AlignInContainer.SetByContainer
                             Height: =lblscopeofworkvalueleaddetailsLdS.Height+lblscopeofwokleaddetailsLdS.Height+20
                             LayoutDirection: =LayoutDirection.Vertical
                             LayoutJustifyContent: =LayoutJustifyContent.Center
+                            LayoutMinHeight: =100
+                            LayoutMinWidth: =250
                             LayoutMode: =LayoutMode.Auto
                             ZIndex: =3
 
@@ -874,9 +919,12 @@ LeadScreen As screen:
                                 ZIndex: =2
 
                         ctncustomscopeofworkleaddetailsLdS As groupContainer.verticalAutoLayoutContainer:
+                            AlignInContainer: =AlignInContainer.SetByContainer
                             Height: =lblcustomscopeofworkvalueleaddetailsLdS.Height+lblcustomscopeofworkleaddetailsLdS.Height+20
                             LayoutDirection: =LayoutDirection.Vertical
                             LayoutJustifyContent: =LayoutJustifyContent.Center
+                            LayoutMinHeight: =100
+                            LayoutMinWidth: =250
                             LayoutMode: =LayoutMode.Auto
                             ZIndex: =4
 
@@ -903,12 +951,16 @@ LeadScreen As screen:
                         ZIndex: =6
 
                     ctnphotosmaterialinfoleaddetailsLdS As groupContainer.horizontalAutoLayoutContainer:
+                        AlignInContainer: =AlignInContainer.SetByContainer
+                        FillPortions: =0
                         Height: |-
                             =If(
                                 ctnmaterialinfoleaddetailsLdS.Height > ctnphotoglryLdS.Height,
                                 ctnmaterialinfoleaddetailsLdS.Height,
                                 ctnmaterialinfoleaddetailsLdS.Height
                             )
+                        LayoutMinHeight: =100
+                        LayoutMinWidth: =250
                         LayoutMode: =LayoutMode.Auto
                         Width: =Parent.Width
                         X: =40
@@ -916,8 +968,11 @@ LeadScreen As screen:
                         ZIndex: =7
 
                         ctnmaterialinfoleaddetailsLdS As groupContainer.verticalAutoLayoutContainer:
+                            AlignInContainer: =AlignInContainer.SetByContainer
                             Height: =lblmaterialleaddetailsLdS.Height+lblmaterialvalueleaddetailsLdS.Height+chbxunitdownLdS.Height+chbxadditionalexpensesLdS.Height+chbxtravelrequiredLdS.Height+chbxcommunucationLdS.Height+20
                             LayoutDirection: =LayoutDirection.Vertical
+                            LayoutMinHeight: =100
+                            LayoutMinWidth: =250
                             LayoutMode: =LayoutMode.Auto
                             ZIndex: =2
 
@@ -975,8 +1030,12 @@ LeadScreen As screen:
                                 ZIndex: =6
 
                         ctnphotoglryLdS As groupContainer.verticalAutoLayoutContainer:
+                            AlignInContainer: =AlignInContainer.SetByContainer
+                            FillPortions: =2
                             Height: =lblphotosLdS.Height+glryphotosLdS.Height+20
                             LayoutDirection: =LayoutDirection.Vertical
+                            LayoutMinHeight: =100
+                            LayoutMinWidth: =250
                             LayoutMode: =LayoutMode.Auto
                             PaddingLeft: =10
                             ZIndex: =3
@@ -989,8 +1048,12 @@ LeadScreen As screen:
                                 ZIndex: =1
 
                             "glryphotosLdS As gallery.'BrowseLayout_Horizontal_TwoTextOneImageOverlayVariant_ver4.0'":
+                                AlignInContainer: =AlignInContainer.Start
+                                FillPortions: =0
                                 Height: =230
                                 Items: =Filter(LeadImages,LeadInformationLID.ID=glryleadlistLS.Selected.ID)
+                                LayoutMinHeight: =287
+                                LayoutMinWidth: =320
                                 TemplatePadding: =0
                                 TemplateSize: =Min(440, Self.Height - 60)
                                 Width: =Parent.Width-40
@@ -1009,9 +1072,13 @@ LeadScreen As screen:
                                     ZIndex: =1
 
                     ctnapproverejectLdS As groupContainer.manualLayoutContainer:
+                        AlignInContainer: =AlignInContainer.SetByContainer
                         BorderColor: =RGBA(0, 0, 0, 0.16)
                         Fill: =RGBA(249, 249, 249, 1)
+                        FillPortions: =0
                         Height: =Parent.Height
+                        LayoutMinHeight: =100
+                        LayoutMinWidth: =250
                         Visible: =true //VarLeadProposal
                         Width: =Parent.Width-40
                         X: =20
@@ -1071,7 +1138,6 @@ LeadScreen As screen:
                                         LeadStatus:"Quoted"}
                                     );
                                     Notify("Estimate number saved successfully.",NotificationType.Success);
-                                    Navigate(DashboardScreen);
                                 )
                             Text: ="Submit Estimate Number"
                             Width: =300
