--- a/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
@@ -1,14 +1,19 @@
 ChatScreen As screen:
 
     Container7 As groupContainer.verticalAutoLayoutContainer:
+        Fill: =RGBA(237, 237, 237, 1)
         Height: =Parent.Height
+        LayoutAlignItems: =LayoutAlignItems.Stretch
         LayoutDirection: =LayoutDirection.Vertical
+        LayoutGap: =10
         LayoutMode: =LayoutMode.Auto
         LayoutOverflowY: =LayoutOverflow.Scroll
+        PaddingLeft: =10
         Width: =Parent.Width
         ZIndex: =1
 
         ctnHeaderDS_9 As groupContainer.horizontalAutoLayoutContainer:
+            AlignInContainer: =AlignInContainer.SetByContainer
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
             Height: =If(Parent.Height<Parent.Width,60,80)
@@ -18,96 +23,140 @@ ChatScreen As screen:
             Width: =Parent.Width
             ZIndex: =1
 
-            imgSchindlerLogo_9 As image:
+            IconMenuDS_3 As icon.Hamburger:
+                Color: =RGBA(0, 0, 0, 1)
+                Height: =Parent.Height
+                Icon: =Icon.Hamburger
+                OnSelect: =//Set(varshowMenu,!varshowMenu)
+                PaddingBottom: =Parent.Height/3
+                PaddingTop: =Parent.Height/3
+                Width: =Parent.Height/2
+                X: =18
+                Y: =11
+                ZIndex: =5
+
+            imgSchindlerLogoDS_3 As image:
+                AlignInContainer: =AlignInContainer.Center
                 DisplayMode: =DisplayMode.View
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =Parent.Height
-                Image: ='3x'
+                Image: ='1x'
                 LayoutMinHeight: =320
                 LayoutMinWidth: =320
-                PaddingLeft: =5
-                PaddingRight: =2
-                Width: =90
-                ZIndex: =1
+                PaddingBottom: =5
+                PaddingTop: =0.00
+                Width: =If(Parent.Width>Parent.Height,Parent.Width/10,Parent.Width/12)
+                X: =0.00
+                ZIndex: =6
 
-            Label1_10 As label:
-                Color: =RGBA(116, 116, 116, 1)
-                FillPortions: =1
+            iconBackCL_2 As icon.BackArrow:
+                AlignInContainer: =AlignInContainer.Center
+                Color: =RGBA(0, 0, 0, 1)
+                Height: =Parent.Height/2
+                Icon: =Icon.ChevronLeft
+                OnSelect: |-
+                    =Navigate(SubmittedLeadScreen);
+                    UpdateContext({locInfoExpanded:false})
+                PaddingBottom: =5
+                PaddingTop: =5
+                Width: =Parent.Width/20
+                X: =18
+                Y: =11
+                ZIndex: =7
+
+            lblHeaderDS_4 As label:
+                AlignInContainer: =AlignInContainer.Center
+                DisplayMode: =DisplayMode.View
+                Font: =Font.Arial
                 FontWeight: =FontWeight.Bold
                 Height: =Parent.Height
                 LayoutMinHeight: =70
                 PaddingLeft: =20
-                Size: =20
-                Text: ="Technicians Lead Generation"
-                Width: =560
-                ZIndex: =2
+                PaddingRight: =5.34
+                PaddingTop: =5.34
+                Size: |
+                    =//21.36
+                    If(Parent.Width<500,14,Parent.Width>500,20)
+                Text: ="Technician Lead Generation"
+                Width: =Parent.Width-imgSchindlerLogoDS_3.Width-IconMenuDS_3.Width-Button2_4.Width-60
+                X: =96.12
+                ZIndex: =8
 
-            Icon2_9 As icon.Hamburger:
-                Color: =RGBA(255, 0, 0, 1)
-                DisplayMode: =DisplayMode.View
-                Icon: =Icon.Hamburger
-                OnSelect: =//Set(varshowMenu,!varshowMenu)
-                PaddingLeft: =10
-                PaddingRight: =10
-                ZIndex: =4
+            Button2_4 As button:
+                AlignInContainer: =AlignInContainer.Center
+                BorderColor: =Color.Red
+                Color: =RGBA(0, 0, 0, 1)
+                DisabledBorderColor: =RGBA(255, 0, 0, 1)
+                DisabledColor: =RGBA(0, 0, 0, 1)
+                DisabledFill: =RGBA(0, 0, 0, 0)
+                DisplayMode: =DisplayMode.Disabled
+                Fill: =RGBA(0, 0, 0, 0)
+                Font: =Font.Arial
+                Height: =Parent.Height/1.5
+                RadiusBottomLeft: =50
+                RadiusBottomRight: =50
+                RadiusTopLeft: =50
+                RadiusTopRight: =50
+                Size: =If(Parent.Width<500,11,Parent.Width>500,12,12)
+                Text: |-
+                    =Left(User().FullName, 1) &
+                    Mid(
+                        User().FullName,
+                        Find(" ", User().FullName) + 1,
+                        1)
+                Width: =Parent.Height/1.5
+                ZIndex: =9
 
         Container1_9 As groupContainer.manualLayoutContainer:
+            AlignInContainer: =AlignInContainer.Center
+            BorderColor: =RGBA(219, 219, 219, 1)
+            BorderThickness: =2
+            Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
             Height: =80
             LayoutMinHeight: =100
             LayoutMinWidth: =250
-            Width: =Parent.Width/1.02
+            RadiusBottomLeft: =10
+            RadiusBottomRight: =10
+            RadiusTopLeft: =10
+            RadiusTopRight: =10
+            Width: =Parent.Width/1.04
             X: =10
             Y: =85
             ZIndex: =2
 
             Button3_9 As button:
-                Align: =Align.Left
+                BorderColor: =RGBA(219, 219, 219, 1)
+                Color: =RGBA(0, 0, 0, 1)
                 DisplayMode: =DisplayMode.View
-                Fill: =RGBA(255, 0, 0, 1)
+                Fill: =RGBA(255, 255, 255, 1)
                 Font: =Font.Arial
                 Height: =Parent.Height
-                PaddingLeft: =100
+                PaddingLeft: =20
+                PaddingRight: =20
                 PaddingTop: =0
                 Size: =24
-                Text: ="Create Lead"
-                Width: =Parent.Width/1.02
+                Text: ="Lead Chat"
+                Width: =Parent.Width
                 ZIndex: =1
 
-            Image1_11 As image:
-                Height: =58
-                Image: =download
-                Width: =63
-                X: =17
-                Y: =11
-                ZIndex: =2
-
-            Label3_9 As label:
-                Align: =Align.Right
-                Color: =RGBA(255, 255, 255, 1)
-                Font: =Font.Arial
-                Height: =80
-                PaddingRight: =10
-                Size: =18
-                Text: =User().FullName
-                Width: =124
-                X: =496
-                ZIndex: =4
-
         Container8 As groupContainer.manualLayoutContainer:
+            AlignInContainer: =AlignInContainer.Center
+            Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
-            Height: =Parent.Height-ctnHeaderDS_9.Height-Container1_9.Height
+            Height: =Parent.Height-ctnHeaderDS_9.Height-Container1_9.Height-40
             LayoutMinHeight: =100
             LayoutMinWidth: =250
             PaddingLeft: =5
             PaddingRight: =5
-            Width: =Parent.Width
+            Width: =Parent.Width-20
             Y: =180
             ZIndex: =3
 
             Gallery4_2 As gallery.variableTemplateHeightGallery:
                 DelayItemLoading: =true
-                Height: =Parent.Height-Button1.Height-TextInput1_2.Height
+                Fill: =RGBA(255, 255, 255, 1)
+                Height: =Parent.Height-TextInput1_2.Height
                 Items: =Sort(Filter(LeadChats,LeadInformationLID.ID=glryLeadsSLS.Selected.ID),'Created On',SortOrder.Ascending)
                 Layout: =Layout.Vertical
                 LoadingSpinner: =LoadingSpinner.Data
@@ -198,13 +247,4 @@ ChatScreen As screen:
                 X: =TextInput1_2.Width-(Self.Width)/1.2
                 Y: =Gallery4_2.Height
                 ZIndex: =3
-
-            Button1 As button:
-                Fill: =RGBA(255, 0, 0, 1)
-                HoverFill: =ColorFade(Self.Fill, -20%)
-                OnSelect: =Navigate(SubmittedLeadScreen)
-                Text: ="Back"
-                X: =32
-                Y: =22
-                ZIndex: =4
 
