--- a/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
@@ -169,55 +169,6 @@ ChatScreen As screen:
             Y: =180
             ZIndex: =3
 
-            TextInput1_2 As text:
-                BorderColor: =Color.Red
-                Default: =""
-                DisabledBorderColor: =RGBA(255, 0, 0, 1)
-                DisabledColor: =RGBA(0, 0, 0, 1)
-                Fill: =RGBA(0, 0, 0, 0)
-                Font: =Font.Arial
-                Height: =60
-                HintText: ="Enter message"
-                HoverBorderColor: =RGBA(255, 0, 0, 1)
-                HoverFill: =RGBA(0, 0, 0, 0)
-                Mode: =TextMode.MultiLine
-                PaddingLeft: =10
-                Size: =If(Parent.Width<500,12,Parent.Width>500,14)
-                Width: =Parent.Width
-                Y: =Gallery4_2.Height
-                ZIndex: =1
-
-            Icon6_2 As icon.Send:
-                BorderColor: =Self.Color
-                BorderThickness: =2
-                Color: =RGBA(255, 0, 0, 1)
-                DisabledBorderColor: =RGBA(255, 0, 0, 1)
-                DisabledColor: =RGBA(255, 0, 0, 1)
-                Height: =If(Parent.Height<Parent.Width,50,70)
-                Icon: =Icon.Send
-                OnSelect: |-
-                    =Patch(LeadChats,Defaults(LeadChats),
-                                {
-                                    ID:GUID(),
-                                    FromEmail:myMail,
-                                 // To:personEmail,
-                                    Message:TextInput1_2.Text,
-                                    FromName:User().FullName,
-                                    LeadInformationLID:LookUp(LeadInformations,ID=VarLtdID)
-                                    
-                                }
-                            );
-                    Refresh(LeadChats);
-                    Reset(TextInput1_2);
-                PaddingBottom: =10
-                PaddingLeft: =10
-                PaddingRight: =10
-                PaddingTop: =10
-                Width: =If(Parent.Width<500,60,80)
-                X: =TextInput1_2.Width-(Self.Width)
-                Y: =Gallery4_2.Height
-                ZIndex: =2
-
             Gallery4_2 As gallery.variableTemplateHeightGallery:
                 DelayItemLoading: =true
                 Fill: |-
@@ -343,14 +294,71 @@ ChatScreen As screen:
                     Y: =15
                     ZIndex: =5
 
-    grpMenuDS_7 As group:
+            Group1 As group:
+                Height: =5
+                Width: =5
+                X: =40
+                Y: =40
+                ZIndex: =4
+
+                TextInput1_2 As text:
+                    BorderColor: =Color.Red
+                    Default: =""
+                    DisabledBorderColor: =RGBA(255, 0, 0, 1)
+                    DisabledColor: =RGBA(0, 0, 0, 1)
+                    Fill: =RGBA(0, 0, 0, 0)
+                    FocusedBorderThickness: =2
+                    Font: =Font.Arial
+                    Height: =If(Parent.Height<Parent.Width,50,70)
+                    HintText: ="Enter message"
+                    HoverBorderColor: =RGBA(255, 0, 0, 1)
+                    HoverFill: =RGBA(0, 0, 0, 0)
+                    Mode: =TextMode.MultiLine
+                    PaddingLeft: =10
+                    Size: =If(Parent.Width<500,12,Parent.Width>500,14)
+                    Width: =Parent.Width-Icon6_2.Width
+                    Y: =Gallery4_2.Height
+                    ZIndex: =1
+
+                Icon6_2 As icon.Send:
+                    BorderColor: =Self.Color
+                    BorderThickness: =2
+                    Color: =RGBA(255, 0, 0, 1)
+                    DisabledBorderColor: =RGBA(255, 0, 0, 1)
+                    DisabledColor: =RGBA(255, 0, 0, 1)
+                    Height: =If(Parent.Height<Parent.Width,50,70)
+                    Icon: =Icon.Send
+                    OnSelect: |-
+                        =Patch(LeadChats,Defaults(LeadChats),
+                                    {
+                                        ID:GUID(),
+                                        FromEmail:myMail,
+                                     // To:personEmail,
+                                        Message:TextInput1_2.Text,
+                                        FromName:User().FullName,
+                                        LeadInformationLID:LookUp(LeadInformations,ID=VarLtdID)
+                                        
+                                    }
+                                );
+                        Refresh(LeadChats);
+                        Reset(TextInput1_2);
+                    PaddingBottom: =10
+                    PaddingLeft: =10
+                    PaddingRight: =10
+                    PaddingTop: =10
+                    Width: =If(Parent.Width<500,60,80)
+                    X: =TextInput1_2.Width
+                    Y: =Gallery4_2.Height
+                    ZIndex: =2
+
+    grpMenuCS As group:
         Height: =5
         Width: =5
         X: =40
         Y: =80
         ZIndex: =4
 
-        ctnBackgroundMenuDS_8 As groupContainer.manualLayoutContainer:
+        ctnBackgroundMenuCS As groupContainer.manualLayoutContainer:
             Fill: =RGBA(0, 0.19, 0.19, 0.19)
             Height: =Parent.Height-ctnHeaderDS.Height
             Visible: =varshowMenu
@@ -358,11 +366,11 @@ ChatScreen As screen:
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =2
 
-        "glryMenuBarDS_7 As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
+        "glryMenuCS As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
             BorderColor: =RGBA(255, 255, 255, 1)
             BorderThickness: =1
             Fill: =RGBA(237, 237, 237, 1)
-            Height: =1.08*(CountRows(glryMenuBarDS_7.AllItems)*(glryMenuBarDS_7.TemplateHeight))
+            Height: =1.08*(CountRows(glryMenuCS.AllItems)*(glryMenuCS.TemplateHeight))
             Items: =Menu
             Layout: =Layout.Vertical
             ShowScrollbar: =false
@@ -374,14 +382,14 @@ ChatScreen As screen:
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =3
 
-            ctnMenuDS_7 As groupContainer.manualLayoutContainer:
+            ctnMenuCS As groupContainer.manualLayoutContainer:
                 DropShadow: =DropShadow.ExtraBold
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =80
                 Width: =Parent.Width/1.02
                 ZIndex: =8
 
-                lblMenuDS_7 As label:
+                lblMenuCS As label:
                     AutoHeight: =true
                     Color: =RGBA(255, 0, 0, 1)
                     Height: =24
@@ -391,12 +399,12 @@ ChatScreen As screen:
                     PaddingTop: =0
                     Size: =If(Parent.Width<500,10,12)
                     Text: =ThisItem.Title
-                    Width: =Parent.Width-iconMenuDS_7.Width-lineIndicatorDS_7.Width
-                    X: =iconMenuDS_7.Width+iconMenuDS_7.X
+                    Width: =Parent.Width-iconMenuCS.Width-lineIndicatorCS.Width
+                    X: =iconMenuCS.Width+iconMenuCS.X
                     Y: =30
                     ZIndex: =1
 
-                iconMenuDS_7 As icon.Add:
+                iconMenuCS As icon.Add:
                     Color: =RGBA(255, 0, 0, 1)
                     Height: =Parent.Height/4.5
                     Icon: =ThisItem.icon
@@ -405,7 +413,7 @@ ChatScreen As screen:
                     Y: =30
                     ZIndex: =3
 
-                btnMensuDS_7 As button:
+                btnMenuCS As button:
                     Fill: =RGBA(0, 0, 0, 0)
                     Height: =80
                     HoverFill: =
@@ -418,7 +426,7 @@ ChatScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =4
 
-                lineIndicatorDS_7 As rectangle:
+                lineIndicatorCS As rectangle:
                     BorderColor: =RGBA(255, 0, 0, 1)
                     BorderThickness: =5
                     Fill: =RGBA(255, 0, 0, 1)
