--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1146,14 +1146,34 @@ LeadScreen As screen:
                                         "Please enter estimate number.",
                                         NotificationType.Information
                                     ),
+                                    If(!IsBlank(LookUp(SHFPEstimates,Estimate=txtinptestimatenumber.Text)),
                                     UpdateIf(
                                         LeadInformations,
                                         ID = glryleadlistLS.Selected.ID,
-                                        {LeadEstimateNumber: txtinptestimatenumber.Text,
-                                        LeadStatus:"Quoted"}
+                                        {
+                                            LeadEstimateNumber: txtinptestimatenumber.Text,
+                                            LeadStatus: "Quoted",
+                                            'LeadPrice ':LookUp(SHFPEstimates,Estimate=txtinptestimatenumber.Text,BidPrice),
+                                            LeadIncentive:LookUp(SHFPEstimates,Estimate=txtinptestimatenumber.Text,BidPrice) * 0.02
+                                        }
                                     );
-                                    Notify("Estimate number saved successfully.",NotificationType.Success);
+                                /*If(!IsBlank(LookUp(LeadInformations,LeadStatus="InProgress" &&ID=glryleadlistLS.Selected.ID)),
+                                Patch(TotalIncentives,Defaults(TotalIncentives),
+                                {
+                                 ID:GUID(),
+                                 Year:Now(),
+                                 TotalProposedLead:Count(LookUp(LeadInformations,ID=glryleadlistLS.Selected.ID))
+                                 //TotalproposedIncentives:""
+                                }););*/
+                                    Notify(
+                                        "Estimate number saved successfully.",
+                                        NotificationType.Success
+                                    );
                                     Navigate(DashboardScreen);
+                                    ,
+                                    Notify("Estimate number not found");
+                                    );
+                                    
                                 )
                             Text: ="Submit Estimate Number"
                             Width: =300
